testdata/valid/go.mod
module github.com/kimtaeyun/testproject

go 1.22
