testdata/invalid/go.mod
module github.com/kimtaeyun/testproject-dc-invalid

go 1.23
